# denoise-machine-x

./: .gitignore  CHANGELOG.md  CMakeLists copy.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  command  command copy  config.json  main.cpp  todo  vcpkg.json
.VSCodeCounter/2025-07-30_15-30-51/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-30_15-31-49/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: linux_build_and_test.yaml  linux_build_and_tests.yaml
build-mac-cpu-debug/: CMakeCache.txt  DartConfiguration.tcl
build-mac-cpu-debug/Testing/Temporary/: CTestCostData.txt
build-mac-cpu-debug/lib/: libIex-3_2_d.31.3.2.4.dylib  libIex-3_2_d.dylib  libIlmThread-3_2_d.31.3.2.4.dylib  libIlmThread-3_2_d.31.dylib  libImath-3_1_d.29.9.0.dylib  libImath-3_1_d.29.dylib  libImath-3_1_d.dylib  libOpenEXRCore-3_2_d.31.3.2.4.dylib  libOpenEXRUtil-3_2_d.31.3.2.4.dylib  libOpenEXRUtil-3_2_d.31.dylib  libOpenEXRUtil-3_2_d.dylib  libgmock_d.1.14.0.dylib  libgmock_main_d.1.14.0.dylib  libgtest_d.1.14.0.dylib  libgtest_main_d.1.14.0.dylib
build-mac-cpu-dev/: CMakeCache.txt  DartConfiguration.tcl
build-mac-cpu-dev/Testing/Temporary/: CTestCostData.txt  LastTest.log.tmpad3e1
build-mac-cpu-dev/lib/: libIex-3_2_d.31.3.2.4.dylib  libIex-3_2_d.31.dylib  libIlmThread-3_2_d.31.3.2.4.dylib  libIlmThread-3_2_d.dylib  libImath-3_1_d.29.9.0.dylib  libOpenEXR-3_2_d.31.dylib  libOpenEXR-3_2_d.dylib  libOpenEXRCore-3_2_d.31.3.2.4.dylib  libOpenEXRCore-3_2_d.31.dylib  libOpenEXRCore-3_2_d.dylib  libOpenEXRUtil-3_2_d.31.3.2.4.dylib  libgmock_d.1.14.0.dylib  libgmock_d.dylib  libgmock_main_d.1.14.0.dylib  libgmock_main_d.dylib  libgtest_d.1.14.0.dylib  libgtest_d.dylib  libgtest_main_d.1.14.0.dylib  libgtest_main_d.dylib
cli/: main.cpp
cli/dmxdenoiser/: main.cpp
config/: filter.json
examples/: palm_pixel_art.exr  palm_pixel_art_layered.exr  palm_pixel_art_layered_.exr  rabbit_pixel_art.exr
examples/exr_samples/: sample2x2.exr  sample2x2_diff.exr  sample2x2_mono.exr
include/dmxdenoiser/: Aov.hpp  Backend.hpp  BuildInfo.hpp  ChannelBuffer.hpp  ChannelInfo.hpp  Config copy.hpp  Config.hpp  DMXError.hpp  DMXImage.hpp  DMXImageView.hpp  Denoiser.hpp  DenoiserParams.hpp  Filter.hpp  FilterFactory.hpp  FilterKernels.hpp  ImageFileType.hpp  ImageIO.hpp  ImageIOExr.hpp  ImageIOFactory.hpp  ImageSequence.hpp  Kernel2D.hpp  LayerDictionary.hpp  LayerInfo.hpp  Logger.hpp  MetaData.hpp  Options.hpp  Parallel.hpp  ParamDictionary.hpp  Parser.hpp  Pixel.hpp  PixelType.hpp  StringConversions.hpp  ThreadPool.hpp  Version.hpp
include/dmxdenoiser/core/: Params1.hpp  aov.hpp  image_factory.hpp  params.hpp
include/dmxdenoiser/filters/: BoxFilter.hpp  ConvolutionCUDA.cuh  ConvolutionCUDA.hpp  ConvolutionFilter.hpp  ExampleFilter.hpp  NLMFilter.hpp
include/dmxdenoiser/image/: DMXImage.hpp  Image.hpp  image.hpp  imageFlat.hpp  pixel.hpp
include/dmxdenoiser/io/: ExrImageIO.hpp  ImageIO.hpp  ImageIOFactory.hpp  JpgImageIO.hpp  PngImageIO.hpp  image.hpp  imageIO.hpp  imageIOFactory.hpp  image_factory.hpp
include/dmxdenoiser/io/params/: EXRIOParams.h  imageIOParams.h
include/dmxdenoiser/util/: AlwaysFalse.hpp  FileUtils.hpp  FloatUtils.hpp  FloatsEqual.hpp  NumericUtils.hpp
include/dmxdenoiser/utils/: FileUtils.hpp  NumericUtils.hpp
src/: BuildInfo.cpp  ChannelBuffer.cpp  DMXImage.cpp  Filter.cpp  ImageFileType.cpp  ImageIO.cpp  ImageIOExr.cpp  ImageIOFactory.cpp  LayerDictionary.cpp  Parser.cpp
src/cli/: main.cpp
src/cli/main.dSYM/Contents/Resources/DWARF/: main
src/filters/: BoxFilter.cpp  ConvolutionCUDA copy.cu  ConvolutionCUDA.cu  ConvolutionFilter copy.cpp  ConvolutionFilter.cpp  ExampleFilter.cpp  NLMFilter.cpp
src/image/: DMXImage.cpp  Image.cpp
src/io/: ImageIO.cpp  ImageIOFactory.cpp
src/utils/: FileUtils.cpp
test/: 2x2sample_write.exr  TestImage.cpp  TestImageIO.cpp  TestOpenExrLib.cpp  sample2x2_write.exr
tests/: .gitignore  AssertLogContains.hpp  BuildInfo_test.cpp  ChannelBuffer_test.cpp  ConvolutionFilter_test.cpp  DMXImage_test.cpp  FileUtils_test.cpp  FilterFactory_test.cpp  FilterKernels_test.cpp  FloatUtils_test.cpp  FloatsEqual.cpp  ImageIOExr_test.cpp  ImageIO_test.cpp  Kernel2D_test.cpp  LayerDictionary_test.cpp  LayerInfo_test.cpp  Logger_test.cpp  NLMFilter_test.cpp  NumericUtils_test.cpp  Parallel_test.cpp  ParamDictionary_test.cpp  Parser_test.cpp  Pixel_test.cpp  RgbaSample_test.cpp  StringConversions_test.cpp  TestConfig.hpp  ThreadPool_test.cpp
tests/include/: TestImage.hpp
tests/test_files/: rabbit_pixel_art_convo_box_3x3.exr  rabbit_pixel_art_convo_box_3x3_gpu.exr  rabbit_pixel_art_convo_gaussan_sigma2_3x3.exr  rabbit_pixel_art_convo_sobel_x_3x3.exr  rabbit_pixel_art_convo_sobel_y_3x3.exr  test_output_exr_image2x2.exr
tools/: build.py
